test/corpus/basics.txt
==================
Function and calls
==================

fn quad(num x) num {
  divolvi x * x;
}

fn inisiu() {
  num r = quad(4.0);
  mostran(r);
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        type: (type)
        name: (identifier)))
    return_type: (type)
    body: (compound_statement
      (return_statement
        value: (binary_expression
          left: (identifier)
          right: (identifier)))))
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (compound_statement
      (variable_declaration
        (variable_declaration_initializer
          type: (type)
          declarator: (identifier)
          value: (call_expression
            function: (identifier)
            arguments: (argument_list
              (literal
                (float))))))
      (expression_statement
        (call_expression
          function: (identifier)
          arguments: (argument_list
            (identifier)))))))

==================
Control flow
==================

fn inisiu() {
  int i = 0;
  pa int j = 0; j < 5; j += 1 {
    si int res = j; res == 3 {
      kontinua;
    } sinon si res == 4 {
      mostra(res);
    } sinon {
      mostra(res);
    }
  }
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (compound_statement
      (variable_declaration
        (variable_declaration_initializer
          type: (type)
          declarator: (identifier)
          value: (literal
            (integer))))
      (for_statement
        initializer: (control_initializer
          (variable_declaration_initializer
            type: (type)
            declarator: (identifier)
            value: (literal
              (integer))))
        condition: (binary_expression
          left: (identifier)
          right: (literal
            (integer)))
        update: (assignment_expression
          left: (identifier)
          operator: (assignment_operator)
          right: (literal
            (integer)))
        body: (compound_statement
          (if_statement
            initializer: (if_variable_declaration_initializer
              declarator: (identifier)
              value: (identifier))
            condition: (binary_expression
              left: (identifier)
              right: (literal
                (integer)))
            consequence: (compound_statement
              (continue_statement))
            alternative: (if_statement
              condition: (binary_expression
                left: (identifier)
                right: (literal
                  (integer)))
              consequence: (compound_statement
                (expression_statement
                  (call_expression
                    function: (identifier)
                    arguments: (argument_list
                      (identifier)))))
              alternative: (compound_statement
                (expression_statement
                  (call_expression
                    function: (identifier)
                    arguments: (argument_list
                      (identifier))))))))))))

==================
Arrays and fstrings
==================

fn inisiu() {
  int[3] nums = [0; 3];
  nums[1] = 7;
  mostran(f"{nums[1]}");
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (compound_statement
      (variable_declaration
        (variable_declaration_initializer
          type: (type)
          declarator: (array_declarator
            size: (integer)
            name: (identifier))
          value: (array_repeat_expression
            value: (literal
              (integer))
            count: (integer))))
      (expression_statement
        (assignment_expression
          left: (array_access_expression
            array: (identifier)
            index: (literal
              (integer)))
          operator: (assignment_operator)
          right: (literal
            (integer))))
      (expression_statement
        (call_expression
          function: (identifier)
          arguments: (argument_list
            (literal
              (fstring
                (interpolation
                  (array_access_expression
                    array: (identifier)
                    index: (literal
                      (integer))))))))))))

=============================
Prelude builtins are calls
=============================

fn inisiu() {
  textu nomi = toma("Nomi: ");
  mostran(nomi);
  konfirma(nomi != "");
  sai(0);
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (compound_statement
      (variable_declaration
        (variable_declaration_initializer
          type: (type)
          declarator: (identifier)
          value: (call_expression
            function: (identifier)
            arguments: (argument_list
              (literal
                (string))))))
      (expression_statement
        (call_expression
          function: (identifier)
          arguments: (argument_list
            (identifier))))
      (expression_statement
        (call_expression
          function: (identifier)
          arguments: (argument_list
            (binary_expression
              left: (identifier)
              right: (literal
                (string))))))
      (expression_statement
        (call_expression
          function: (identifier)
          arguments: (argument_list
            (literal
              (integer))))))))

==================
Molda and primitive types
==================

molda Enderesu {
  textu rua;
  i32 numero;
}

molda Pessoa {
  textu nomi;
  Enderesu[2] enderesus;
  u64 id;
}

fn inisiu() {
  Pessoa pessoa = Pessoa{
    nomi = "Ana",
    enderesus = (Enderesu[]) [
      Enderesu{rua = "antigu", numero = 10},
      Enderesu{rua = "nobu", numero = 44},
    ],
    id = 1,
  };
  pessoa.enderesus[0].numero += 5;
  f32 ratio = 1.5;
  usize count = 3;
}

---

(source_file
  (molda_declaration
    name: (type_identifier)
    (molda_field_declaration
      type: (type)
      declarator: (identifier))
    (molda_field_declaration
      type: (type)
      declarator: (identifier)))
  (molda_declaration
    name: (type_identifier)
    (molda_field_declaration
      type: (type)
      declarator: (identifier))
    (molda_field_declaration
      type: (type
        (type_identifier))
      declarator: (array_declarator
        size: (integer)
        name: (identifier)))
    (molda_field_declaration
      type: (type)
      declarator: (identifier)))
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (compound_statement
      (variable_declaration
        (variable_declaration_initializer
          type: (type
            (type_identifier))
          declarator: (identifier)
          value: (record_literal
            type: (type_identifier)
            (record_field_initializer
              name: (identifier)
              value: (literal
                (string)))
            (record_field_initializer
              name: (identifier)
              value: (typed_array_literal
                type: (type
                  (type_identifier))
                value: (array_literal
                  (record_literal
                    type: (type_identifier)
                    (record_field_initializer
                      name: (identifier)
                      value: (literal
                        (string)))
                    (record_field_initializer
                      name: (identifier)
                      value: (literal
                        (integer))))
                  (record_literal
                    type: (type_identifier)
                    (record_field_initializer
                      name: (identifier)
                      value: (literal
                        (string)))
                    (record_field_initializer
                      name: (identifier)
                      value: (literal
                        (integer)))))))
            (record_field_initializer
              name: (identifier)
              value: (literal
                (integer))))))
      (expression_statement
        (assignment_expression
          left: (member_access_expression
            object: (array_access_expression
              array: (member_access_expression
                object: (identifier)
                member: (identifier))
              index: (literal
                (integer)))
            member: (identifier))
          operator: (assignment_operator)
          right: (literal
            (integer))))
      (variable_declaration
        (variable_declaration_initializer
          type: (type)
          declarator: (identifier)
          value: (literal
            (float))))
      (variable_declaration
        (variable_declaration_initializer
          type: (type)
          declarator: (identifier)
          value: (literal
            (integer)))))))

==================
Two-section pa and kebra
==================

fn inisiu() {
  pa int i = 0; i < 3 {
    i += 1;
    kebra;
  }
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (compound_statement
      (for_statement
        initializer: (control_initializer
          (variable_declaration_initializer
            type: (type)
            declarator: (identifier)
            value: (literal
              (integer))))
        condition: (binary_expression
          left: (identifier)
          right: (literal
            (integer)))
        body: (compound_statement
          (expression_statement
            (assignment_expression
              left: (identifier)
              operator: (assignment_operator)
              right: (literal
                (integer))))
          (break_statement))))))

==================
Multi-dimensional arrays, array parameters and returns
==================

fn dobra(int[3] v) int[2][3] {
  divolvi [v, [0; 3]];
}

fn inisiu() {
  int[2][3] m = [[1, 2, 3], [0; 3]];
  m[0] = dobra(m[1])[1];
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        type: (type)
        size: (integer)
        name: (identifier)))
    return_type: (type)
    return_size: (integer)
    return_size: (integer)
    body: (compound_statement
      (return_statement
        value: (array_literal
          (identifier)
          (array_repeat_expression
            value: (literal
              (integer))
            count: (integer))))))
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (compound_statement
      (variable_declaration
        (variable_declaration_initializer
          type: (type)
          declarator: (array_declarator
            size: (integer)
            size: (integer)
            name: (identifier))
          value: (array_literal
            (array_literal
              (literal
                (integer))
              (literal
                (integer))
              (literal
                (integer)))
            (array_repeat_expression
              value: (literal
                (integer))
              count: (integer)))))
      (expression_statement
        (assignment_expression
          left: (array_access_expression
            array: (identifier)
            index: (literal
              (integer)))
          operator: (assignment_operator)
          right: (array_access_expression
            array: (call_expression
              function: (identifier)
              arguments: (argument_list
                (array_access_expression
                  array: (identifier)
                  index: (literal
                    (integer)))))
            index: (literal
              (integer))))))))
