test/corpus/operators.txt
==================
Bitwise and remainder operators
==================

fn inisiu() {
  int a = 1 | 2 ^ 3 & 4 + 5;
  bool b = a & 1 == 1;
  int c = ~a % 3;
  a &= 1;
  a |= 2;
  a ^= 3;
  a %= 4;
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (compound_statement
      (variable_declaration
        (variable_declaration_initializer
          (type)
          (identifier)
          (binary_expression
            (literal
              (integer))
            (binary_expression
              (literal
                (integer))
              (binary_expression
                (literal
                  (integer))
                (binary_expression
                  (literal
                    (integer))
                  (literal
                    (integer))))))))
      (variable_declaration
        (variable_declaration_initializer
          (type)
          (identifier)
          (binary_expression
            (binary_expression
              (identifier)
              (literal
                (integer)))
            (literal
              (integer)))))
      (variable_declaration
        (variable_declaration_initializer
          (type)
          (identifier)
          (binary_expression
            (unary_expression
              (identifier))
            (literal
              (integer)))))
      (expression_statement
        (assignment_expression
          (identifier)
          (assignment_operator)
          (literal
            (integer))))
      (expression_statement
        (assignment_expression
          (identifier)
          (assignment_operator)
          (literal
            (integer))))
      (expression_statement
        (assignment_expression
          (identifier)
          (assignment_operator)
          (literal
            (integer))))
      (expression_statement
        (assignment_expression
          (identifier)
          (assignment_operator)
          (literal
            (integer)))))))
